<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/llKaiGuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgKaiGuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/setup" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/set"
            android:textColor="#00369c" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llGuangBo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgGuangBo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/guangbo"
            android:textColor="#1c9c2c" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llShuiBeng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgShuiBeng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pump" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/water_pump"
            android:textColor="#004fdf" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llJiaRe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgJiaRe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/steam" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/zhengqi"
            android:textColor="#99196b" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llJiaReYG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgJiaReYG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/heating" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/heat"
            android:textColor="#d42218" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDeng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgDeng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/flood_light" />

        <TextView
            android:id="@+id/tv_deng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/light"
            android:textColor="#d55a01" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llFengBeng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgFengShan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/discharge" />

        <TextView
            android:id="@+id/tv_fan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/fan"
            android:textColor="#09743f" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llYinYue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgYinYue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/music" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/multi_media"
            android:textColor="#820c86" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llChouYang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgChouYang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ozone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/antibacteria"
            android:textColor="#0e4ba7" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llJiaShui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgJiaShui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/water" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/water"
            android:textColor="#01b3d3" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llWenDu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgWenDu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/set_temp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/temp"
            android:textColor="#b90d0d" />

    </LinearLayout>

</LinearLayout>
