<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/llKaiGuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgKaiGuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/setup" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/set"
            android:textColor="#00369c" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llShuiBeng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgShuiBeng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pump" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/water_pump"
            android:textColor="#004fdf" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llJiaRe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgJiaRe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/heating" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/heat"
            android:textColor="#d42218" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llQiPao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgQiPao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/discharge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="AIR-BLOWER"
            android:textColor="#056a7a" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llYinYue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgYinYue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/music" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/multi_media"
            android:textColor="#820c86" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDengGuang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgDengGuang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/floodlight" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/light"
            android:textColor="#d47803" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llChouYang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgChouYang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ozone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Antibacteria"
            android:textColor="#0e4ba7" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llJiaShui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgJiaShui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/water" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="WATER"
            android:textColor="#01b3d3" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llWenDu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgWenDu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/set_temp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="TEMP"
            android:textColor="#b90d0d" />

    </LinearLayout>

</LinearLayout>
